k8s/authservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: microservices-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: rfgualotuna/authservice:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
