k8s/catalogo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo
  namespace: microservices-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalogo
  template:
    metadata:
      labels:
        app: catalogo
    spec:
      containers:
        - name: catalogo
          image: rfgualotuna/catalogo:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
