k8s/eureka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservices-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: eureka-server:latest
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
