k8s/notificaciones-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones
  namespace: microservices-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notificaciones
  template:
    metadata:
      labels:
        app: notificaciones
    spec:
      containers:
        - name: notificaciones
          image: rfgualotuna/notificaciones:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
