k8s/publicaciones-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publicaciones
  namespace: microservices-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: publicaciones
  template:
    metadata:
      labels:
        app: publicaciones
    spec:
      containers:
        - name: publicaciones
          image: publicaciones:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
