k8s/sincronizacion-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sincronizacion
  namespace: microservices-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sincronizacion
  template:
    metadata:
      labels:
        app: sincronizacion
    spec:
      containers:
        - name: sincronizacion
          image: rfgualotuna/sincronizacion:latest
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
