k8s/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: microservices-ns
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
