k8s/authservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authservice-svc
  namespace: microservices-ns
spec:
  selector:
    app: authservice
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
