k8s/catalogo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogo-svc
  namespace: microservices-ns
spec:
  selector:
    app: catalogo
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
