k8s/cockroachdb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb-svc
  namespace: microservices-ns
spec:
  selector:
    app: cockroachdb
  ports:
    - name: sql
      port: 26257
      targetPort: 26257
    - name: ui
      port: 8080
      targetPort: 8080
  type: ClusterIP
