k8s/eureka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-svc
  namespace: microservices-ns
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
