k8s/notificaciones-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-svc
  namespace: microservices-ns
spec:
  selector:
    app: notificaciones
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
