k8s/publicaciones-service.yml
apiVersion: v1
kind: Service
metadata:
  name: publicaciones-svc
  namespace: microservices-ns
spec:
  selector:
    app: publicaciones
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
