k8s/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
  namespace: microservices-ns
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: ClusterIP
