k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-publicaciones.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 8000
    - host: eureka.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-svc
                port:
                  number: 8761
    - host: rabbitmq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-svc
                port:
                  number: 15672
    - host: cockroach.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockroachdb-svc
                port:
                  number: 8080
